--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "live-server": "^1.2.0",
+    "lodash": "^4.17.5",
     "node-plantuml": "^0.5.0"
   }
 }
