--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   "scripts": {
     "start": "node index.js",
     "build": "doxmate build",
-    "dev": "fswatch -0 -e doc/ . | xargs -0 -n 1 -I {} doxmate build"
+    "dev": "fswatch -0 -e doc/ . | xargs -0 -n 1 -I {} doxmate build",
+    "mysql": "python plantuml2mysql.py db.uml jackfruit > jackfruit.MySQL.sql",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "entities": "python plantuml2entities.py && cd jackfruit_bean && mvn clean && mvn package && mvn install"
   },
-  "author": "Bryant Li",
+  "author": "oriente",
   "license": "ISC",
   "dependencies": {
     "live-server": "^1.2.0",
